[tool.poetry]
name = "wordinvaders"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
"mixer.py" = "^0.0.3"
mixer = "^7.1.2"
pandas = "^1.2.1"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
